# rag-demo

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
configs/: config.yaml
notebooks/: 01_quick_start.ipynb  02_advanced_features.ipynb  README.md
scripts/: ingest.py  query.py
src/embeddings/: factory.py  providers.py
src/generation/: factory.py  llm_providers.py
src/ingest/: chunking.py
src/ingest/loaders/: web_loader.py
src/pipeline/: ingestion.py  rag.py
src/retrieval/: factory.py  rerankers.py  strategies.py  vector_stores.py
src/utils/: config_loader.py  interfaces.py
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_rag_pipeline.py
tests/unit/: test_chunking.py  test_embeddings.py  test_retrieval.py
