[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-demo"
version = "0.2.0"
description = "A modular Retrieval-Augmented Generation (RAG) system for querying infrastructure-as-code documentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jack Radigan", email = "jack.radigan@gmail.com"}
]
keywords = ["rag", "retrieval-augmented-generation", "llm", "vector-search", "nlp", "infrastructure-as-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "langchain==0.1.0",
    "langchain-community==0.0.10",
    "qdrant-client==1.7.0",
    "sentence-transformers==2.3.1",
    "torch==2.1.2",
    "langchain-ollama==0.0.1",
    "beautifulsoup4==4.12.3",
    "playwright==1.41.0",
    "lxml==5.1.0",
    "html2text==2024.2.26",
    "tiktoken==0.5.2",
    "nltk==3.8.1",
    "pyyaml==6.0.1",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "streamlit==1.30.0",
    "requests==2.31.0",
    "tqdm==4.66.1",
    "loguru==0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "black==24.1.1",
    "ruff==0.1.14",
    "mypy==1.8.0",
    "types-requests==2.31.0.20240125",
    "types-pyyaml==6.0.12.12",
]
notebook = [
    "jupyter==1.0.0",
    "jupyterlab==4.0.10",
    "ipykernel==6.28.0",
    "matplotlib==3.8.2",
    "pandas==2.1.4",
]
openai = [
    "openai==1.7.2",
]
anthropic = [
    "anthropic==0.8.1",
]
all = [
    "rag-demo[dev,notebook,openai,anthropic]",
]

[project.urls]
Homepage = "https://github.com/jprad/rag-demo"
Repository = "https://github.com/jprad/rag-demo"
Issues = "https://github.com/jprad/rag-demo/issues"

[project.scripts]
rag-ingest = "scripts.ingest:main"
rag-query = "scripts.query:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
exclude = ["tests*", "notebooks*", "data*", "logs*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | env
  | data
  | logs
  | \.pytest_cache
  | \.mypy_cache
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "data",
    "logs",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "*.egg-info",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

exclude = [
    "venv",
    ".venv",
    "env",
    "data",
    "logs",
    "tests",
]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_community.*",
    "langchain_ollama.*",
    "qdrant_client.*",
    "sentence_transformers.*",
    "torch.*",
    "streamlit.*",
    "nltk.*",
    "tiktoken.*",
    "playwright.*",
    "bs4.*",
    "html2text.*",
    "tqdm.*",
    "loguru.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

markers = [
    "unit: Unit tests (fast, isolated, mocked dependencies)",
    "integration: Integration tests (slower, may use real services)",
    "slow: Slow running tests",
    "requires_qdrant: Tests that require Qdrant running",
    "requires_ollama: Tests that require Ollama running",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
